package classMetier.personne;

import classMetier.Util.Adresse;

public class Pharmacien extends Personne{
    public Pharmacien(String nom, String prenom, String mail, String tel, Adresse adresse) {
        super(nom, prenom, mail, tel, adresse);
    }
}
